; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c_SYS_GetFontEncoding.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c_SYS_GetFontEncoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sys_fontenc = common dso_local global i32 0, align 4
@VI_NTSC = common dso_local global i32 0, align 4
@_viReg = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SYS_GetFontEncoding() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @sys_fontenc, align 4
  %5 = icmp sle i32 %4, 1
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @sys_fontenc, align 4
  store i32 %7, i32* %1, align 4
  br label %23

8:                                                ; preds = %0
  store i32 0, i32* %2, align 4
  %9 = call i32 (...) @VIDEO_GetCurrentTvMode()
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @VI_NTSC, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %8
  %14 = load i32*, i32** @_viReg, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 55
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, 2
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store i32 1, i32* %2, align 4
  br label %20

20:                                               ; preds = %19, %13, %8
  %21 = load i32, i32* %2, align 4
  store i32 %21, i32* @sys_fontenc, align 4
  %22 = load i32, i32* %2, align 4
  store i32 %22, i32* %1, align 4
  br label %23

23:                                               ; preds = %20, %6
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @VIDEO_GetCurrentTvMode(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
